homelab/wip/bookorbit/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bookorbit
